Refactor database configuration and connection functions for improved clarity and consistency

--- a/database/config.json
+++ b/database/config.json
@@ -2,8 +2,8 @@
     "MONGO_URI":"mongodb://localhost:27017/",
     "DATABASE":"palmmind_project",
     "collections":{
-        "metadata":"metadata",
-        "bookings":"bookings"
+        "metadata_database":"metadata",
+        "bookings_database":"bookings"
     }
 
 }
